--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -117,15 +117,19 @@
                             <li><a href="email_template.html">Email templates</a></li>
                         </ul>
                     </li-->
-                    <!--li>
-                        <a href="mailbox.html"><i class="fa fa-file-text"></i> <span class="nav-label">Factura</span><span class="fa arrow"></span></a>
+                    <li>
+                        <a href="#"><i class="fa fa-file-text"></i> <span class="nav-label">Reclamos</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="mailbox.html">Inbox</a></li>
-                            <li><a href="mail_detail.html">Email view</a></li>
-                            <li><a href="mail_compose.html">Compose email</a></li>
-                            <li><a href="email_template.html">Email templates</a></li>
+                            <li><a href="/sistema/add-refund">Agregar Reembolsos</a></li>
+                            <li><a href="/sistema/refunds">Consultar Reembolsos</a></li>
+                            <li><a href="/sistema/add-letter-guarantee">Agregar Cartas Avales</a></li>
+                            <li><a href="/sistema/letters-guarentee">Consultar Cartas Avales</a></li>
+                            <li><a href="/sistema/add-emergency">Agregar Emergencias</a></li>
+                            <li><a href="/sistema/emergencies">Consultar Emergencias</a></li>
+                            <li><a href="/sistema/add-amp">Agregar AMP</a></li>
+                            <li><a href="/sistema/amp">Consultar AMP</a></li>
                         </ul>
-                    </li-->
+                    </li>
                     <!--li>
                         <a href="#"><i class="fa fa-file-text"></i> <span class="nav-label">Reportes</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
