--- a/src/views/editExecutive.ejs
+++ b/src/views/editExecutive.ejs
@@ -105,7 +105,8 @@
                                             <input 
                                                 type="email"
                                                 name="correo_ejecutivo"
-                                                id="correo_ejecutivo" 
+                                                id="correo_ejecutivo"
+                                                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" 
                                                 value="<%= executive.correo_ejecutivo %>" 
                                                 class="form-control"
                                                 required
