--- a/src/views/editNaturalInsured.ejs
+++ b/src/views/editNaturalInsured.ejs
@@ -99,6 +99,7 @@
                                                 type="email" 
                                                 name="correo_asegurado_per_nat"
                                                 id="correo_asegurado_per_nat"
+                                                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
                                                 value="<%= naturalInsured.correo_asegurado_per_nat %>"
                                                 class="form-control" 
                                                 required
