--- a/src/views/executiveForm.ejs
+++ b/src/views/executiveForm.ejs
@@ -90,7 +90,8 @@
                                             <input 
                                                 type="email"
                                                 name="correo_ejecutivo"
-                                                id="correo_ejecutivo" 
+                                                id="correo_ejecutivo"
+                                                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" 
                                                 placeholder="Correo de Ejecutivo *" 
                                                 class="form-control"
                                                 required
