--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -59,10 +59,10 @@
             </div>
         </div>
         <hr/>
-        <div class="row copyright">
-            <div class="col-md-8">
-                ©2020 All Rights Reserved. Grupo DgFarm C.A. Privacy and Terms
-            </div>
+        <div class="row">
+            <div>
+                <strong>Desarrollado</strong> por 1B7
+            </div>            
         </div>
     </div>
 
