--- a/src/views/patrimonialPolicyForm.ejs
+++ b/src/views/patrimonialPolicyForm.ejs
@@ -177,7 +177,7 @@
                                     <div class="col-lg-6">
                                         <div class="form-group">
                                             <div class="form-group row">
-                                                <label class="col-sm-3 col-form-label">Tomador viejo</label>
+                                                <label class="col-sm-3 col-form-label">Asegurado/Tomador</label>
                                                 <div class="col-sm-9">
                                                     <div><label><input type="checkbox" name="tomador_viejo" id="tomador_viejo" onclick="pasarNombreTomador();"> 
                                                                 ¿Asegurado mismo tomador?</label></div>
