--- a/src/views/policies.ejs
+++ b/src/views/policies.ejs
@@ -75,12 +75,7 @@
 </br>
 </br>
 <div class="footer">
-    <div class="float-right">
-        10GB of <strong>250GB</strong> Free.
-    </div>
-    <div>
-        <strong>Copyright</strong> Example Company &copy; 2014-2018
-    </div>
+    <strong>Desarrollado</strong> por 1B7
 </div>
 </div>
 </div>
