--- a/src/views/userForm.ejs
+++ b/src/views/userForm.ejs
@@ -70,7 +70,8 @@
                                             <input 
                                                 type="email"
                                                 name="email_usuario"
-                                                id="email_usuario" 
+                                                id="email_usuario"
+                                                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" 
                                                 placeholder="Email *" 
                                                 class="form-control"
                                                 required
