--- a/src/views/editLegalInsured.ejs
+++ b/src/views/editLegalInsured.ejs
@@ -127,6 +127,7 @@
                                                 type="email" 
                                                 name="correo_asegurado_per_nat"
                                                 id="correo_asegurado_per_nat"
+                                                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
                                                 value="<%= legalInsured.correo_asegurado_per_jur %>"
                                                 class="form-control" 
                                                 required
@@ -134,13 +135,14 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Email opcional</label>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Emails opcionales</label>
                                         <div class="col-sm-9">
                                             <input 
-                                                type="text"
+                                                type="email"
                                                 name="correo_opcional_per_jur"
-                                                id="correo_opcional_per_jur" 
-                                                value="<%= legalInsured.correo_opcional_per_jur %>" 
+                                                id="correo_opcional_per_jur"
+                                                value="<%= legalInsured.correo_opcional_per_jur %>"
+                                                multiple 
                                                 class="form-control"
                                             >
                                         </div>
