--- a/src/views/editUser.ejs
+++ b/src/views/editUser.ejs
@@ -85,7 +85,8 @@
                                             <input 
                                                 type="email"
                                                 name="email_usuario"
-                                                id="email_usuario" 
+                                                id="email_usuario"
+                                                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" 
                                                 value="<%= user.correo_usuario %>" 
                                                 class="form-control"
                                                 required
