--- a/src/views/forgotPassword.ejs
+++ b/src/views/forgotPassword.ejs
@@ -45,7 +45,7 @@
                                     >
                                 </div>
 
-                                <button type="submit" class="btn btn-color block full-width m-b">Enviar nueva contraseña</button>
+                                <button type="submit" class="btn btn-primary block full-width m-b">Enviar nueva contraseña</button>
 
                             </form>
                         </div>
@@ -55,9 +55,9 @@
         </div>
         <hr/>
         <div class="row">
-            <div class="col-md-12">
-                ©2020 All Rights Reserved. Grupo DgFarm C.A. Privacy and Terms
-            </div>
+            <div>
+                <strong>Desarrollado</strong> por 1B7
+            </div>  
         </div>
     </div>
 
