--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -19,22 +19,94 @@
 
 <div class="row">
     <div class="col-lg-6">
-        <div class="ibox ">
+        <div class="ibox">
             <div class="ibox-title">
                 <h5>Prima Cobradas por Aseguradoras</h5>
             </div>
             <div class="ibox-content">
-                <div id="ct-chart3" class="ct-perfect-fourth"></div>
+                <div class="chartBox">
+                    <canvas id="barChart" height="225"></canvas>
+                    <div class="col-sm-12">
+                        <div class="form-group">
+                            <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha Desde</label>
+                                <div class="col-sm-9">    
+                                    <input 
+                                        type="date"
+                                        name="fecha_inicio"
+                                        id="fecha_inicio"
+                                        onchange="filterData()"
+                                        value="<%= minDate %>" 
+                                        class="form-control"
+                                        required
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha Hasta</label>
+                                <div class="col-sm-9">
+                                    <input 
+                                        type="date"
+                                        name="fecha_final"
+                                        id="fecha_final" 
+                                        onchange="filterData()"
+                                        value="<%= maxDate %>"
+                                        class="form-control"
+                                        required
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="legend" class="legendbox">
+                </div>
             </div>
         </div>
     </div>
     <div class="col-lg-6">
-        <div class="ibox ">
+        <div class="ibox">
             <div class="ibox-title">
                 <h5>Prima por AP</h5>
             </div>
             <div class="ibox-content">
-                <div id="ct-chart4" class="ct-perfect-fourth"></div>
+                <div class="chartBox">
+                    <canvas id="horizontalBarChart" height="225"></canvas>
+                    <div class="col-sm-12">
+                        <div class="form-group">
+                            <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha Desde</label>
+                                <div class="col-sm-9">
+                                    <input 
+                                        type="date"
+                                        name="fecha_inicio_agente"
+                                        id="fecha_inicio_agente"
+                                        onchange="filterDataOwnAgent()"
+                                        value="<%= minDateOwnAgent %>"
+                                        class="form-control"
+                                        required
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha Hasta</label>
+                                <div class="col-sm-9">
+                                    <input 
+                                        type="date"
+                                        name="fecha_final_agente"
+                                        id="fecha_final_agente" 
+                                        onchange="filterDataOwnAgent()"
+                                        value="<%= maxDateOwnAgent %>"
+                                        class="form-control"
+                                        required
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="legendOwnAgent" class="legendbox">
+                </div>
             </div>
         </div>
     </div>
@@ -61,11 +133,8 @@
 </br>
 </br>
 <div class="footer">
-    <div class="float-right">
-        10GB of <strong>250GB</strong> Free.
-    </div>
     <div>
-        <strong>Copyright</strong> Example Company &copy; 2014-2018
+        <strong>Desarrollado</strong> por 1B7
     </div>
 </div>
     
@@ -123,49 +192,141 @@
     <script>
         var insurer = <%- JSON.stringify(insurers) %>;
         var insurerPremium = <%- JSON.stringify(InsurersPremium) %>;
+        var dates = <%- JSON.stringify(dates) %>;
+        var backgroundColor = ['rgba(17, 59, 191, 1.0)', 'rgba(26,179,148, 0.8)', 'rgba(207, 0, 15, 1)'];
+        if (insurerPremium.length > backgroundColor.length) {
+            for (let i = 0; i < insurerPremium.length; i++) {
+                if ((i % 3) === 0) {
+                    backgroundColor.push('rgba(17, 59, 191, 1.0)');
+                } else if ((i % 4) === 0) {
+                    backgroundColor.push('rgba(26,179,148, 0.8)');
+                } else if ((i % 5) === 0) {
+                    backgroundColor.push('rgba(207, 0, 15, 1)');
+                }
+            }
+        }
+
+        var barData = {
+            labels: dates,
+            datasets: [
+                {
+                    backgroundColor: backgroundColor,
+                    pointBorderColor: "#fff",
+                    data: insurerPremium
+                },
+            ]
+        };
+        var barOptions = {
+            responsive: true,
+            legend: {
+                display: false
+            }
+        };
+        var ctx = document.getElementById("barChart").getContext("2d");
+        var chartBar = new Chart(ctx, {type: 'bar', data: barData, options:barOptions});
+
+        legend = document.getElementById('legend');
+        const legendLength = chartBar.data.labels;
+        const legendBg = chartBar.data.datasets[0].backgroundColor;
+        const legendLabels = insurer;
+        const legendData = chartBar.data.datasets[0].data;
+        for (let i = 0; i < legendLength.length; i++) {
+            const lp = document.createElement('P');
+            const lcircle = document.createElement('SPAN');
+            lcircle.classList.add('lcircle');
+            lcircle.style.backgroundColor = legendBg[i];
+            const ltext = document.createElement('SPAN');
+            var ltextNode = document.createTextNode(legendLabels[i] + ' - ' + legendData[i]);
+            ltext.classList.add('ltext');
+            legend.appendChild(lp);
+            lp.appendChild(lcircle);
+            lp.appendChild(ltext);
+            ltext.appendChild(ltextNode);
+        }
+
+        function filterData() {
+            const dates2 = [...dates];
+            const startDate = document.getElementById('fecha_inicio');
+            const endDate = document.getElementById('fecha_final');
+            const indexStartDate = dates2.indexOf(startDate.value);
+            const indexEndDate = dates2.indexOf(endDate.value);
+            const filterDate = dates2.slice(indexStartDate, indexEndDate+1);
+            chartBar.data.labels = filterDate;
+            const datapoints = [...insurerPremium];
+            const filterDatapoints = datapoints.slice(indexStartDate, indexEndDate+1);
+            chartBar.data.datasets[0].data = filterDatapoints;
+            chartBar.update();
+        }
+    </script>
+
+    <script>
         var ownAgent = <%- JSON.stringify(ownAgents) %>;
         var ownAgentComission = <%- JSON.stringify(ownAgentsComission) %>;
-        $(document).ready(function(){
-
-            // Stocked bar chart
-
-            new Chartist.Bar('#ct-chart3', {
-                labels: insurer,
-                series: [
-                    insurerPremium
-                ]
-            }, {
-                stackBars: true,
-                axisY: {
-                    labelInterpolationFnc: function(value) {
-                        return '$' + (value / 500);
-                    }
+        var datesOwnAgent = <%- JSON.stringify(datesOwnAgents) %>;
+        var backgroundColor = ['rgba(17, 59, 191, 1.0)', 'rgba(26,179,148, 0.8)', 'rgba(207, 0, 15, 1)'];
+        if (ownAgentComission.length > backgroundColor.length) {
+            for (let i = 0; i < ownAgentComission.length; i++) {
+                if ((i % 3) === 0) {
+                    backgroundColor.push('rgba(17, 59, 191, 1.0)');
+                } else if ((i % 4) === 0) {
+                    backgroundColor.push('rgba(26,179,148, 0.8)');
+                } else if ((i % 5) === 0) {
+                    backgroundColor.push('rgba(207, 0, 15, 1)');
                 }
-            }).on('draw', function(data) {
-                        if(data.type === 'bar') {
-                            data.element.attr({
-                                style: 'stroke-width: 30px'
-                            });
-                        }
-                    });
-                    
-            // Stocked horizontal bar
+            }
+        }
 
-            new Chartist.Bar('#ct-chart4', {
-                labels: ownAgent,
-                series: [
-                    ownAgentComission
-                ]
-            }, {
-                seriesBarDistance: 10,
-                reverseData: true,
-                horizontalBars: true,
-                axisY: {
-                    offset: 70
-                }
-            });
+        var barData = {
+            labels: datesOwnAgent,
+            datasets: [
+                {
+                    backgroundColor: backgroundColor,
+                    pointBorderColor: "#fff",
+                    data: ownAgentComission
+                },
+            ]
+        };
+        var barOptions = {
+            responsive: true,
+            legend: {
+                display: false
+            }
+        };
+        var ctx = document.getElementById("horizontalBarChart").getContext("2d");
+        var chartHorizontalBar = new Chart(ctx, {type: 'horizontalBar', data: barData, options:barOptions});
 
-        });
+        legendOwnAgent = document.getElementById('legendOwnAgent');
+        const legendLengthOwnAgent = chartHorizontalBar.data.labels;
+        const legendBgOwnAgent = chartHorizontalBar.data.datasets[0].backgroundColor;
+        const legendLabelsOwnAgent = ownAgent;
+        const legendDataOwnAgent = chartHorizontalBar.data.datasets[0].data;
+        for (let i = 0; i < legendLengthOwnAgent.length; i++) {
+            const lpOwnAgent = document.createElement('P');
+            const lcircleOnwAgent = document.createElement('SPAN');
+            lcircleOnwAgent.classList.add('lcircleOnwAgent');
+            lcircleOnwAgent.style.backgroundColor = legendBgOwnAgent[i];
+            const ltextOwnAgent = document.createElement('SPAN');
+            var ltextOwnAgentNode = document.createTextNode(legendLabelsOwnAgent[i] + ' - ' + legendDataOwnAgent[i]);
+            ltextOwnAgent.classList.add('ltextOnwAgent');
+            legendOwnAgent.appendChild(lpOwnAgent);
+            lpOwnAgent.appendChild(lcircleOnwAgent);
+            lpOwnAgent.appendChild(ltextOwnAgent);
+            ltextOwnAgent.appendChild(ltextOwnAgentNode);
+        }  
+        
+        function filterDataOwnAgent() {
+            const dates = [...datesOwnAgent];
+            const startDate = document.getElementById('fecha_inicio_agente');
+            const endDate = document.getElementById('fecha_final_agente');
+            const indexStartDate = dates.indexOf(startDate.value);
+            const indexEndDate = dates.indexOf(endDate.value);
+            const filterDate = dates.slice(indexStartDate, indexEndDate+1);
+            chartHorizontalBar.data.labels = filterDate;
+            const datapoints = [...ownAgentComission];
+            const filterDatapoints = datapoints.slice(indexStartDate, indexEndDate+1);
+            chartHorizontalBar.data.datasets[0].data = filterDatapoints;
+            chartHorizontalBar.update();
+        }
     </script>
 
 </body>
