--- a/src/views/naturalInsuredForm.ejs
+++ b/src/views/naturalInsuredForm.ejs
@@ -84,6 +84,7 @@
                                                 type="email" 
                                                 name="correo_asegurado_per_nat"
                                                 id="correo_asegurado_per_nat"
+                                                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
                                                 placeholder="Email *"
                                                 class="form-control" 
                                                 required
