--- a/src/views/ownAgentForm.ejs
+++ b/src/views/ownAgentForm.ejs
@@ -90,7 +90,8 @@
                                             <input 
                                                 type="email"
                                                 name="correo_agente_propio"
-                                                id="correo_agente_propio" 
+                                                id="correo_agente_propio"
+                                                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
                                                 placeholder="Correo de Agente Propio *" 
                                                 class="form-control"
                                                 required
